--- a/dapps/W3MWagmi/package.json
+++ b/dapps/W3MWagmi/package.json
@@ -19,44 +19,47 @@
     "@coinbase/wallet-mobile-sdk": "1.0.13",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.24.0",
-    "@react-native-clipboard/clipboard": "1.14.1",
-    "@react-native-community/netinfo": "11.3.2",
+    "@react-native-clipboard/clipboard": "1.14.3",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "6.6.1",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.10.1",
     "@reown/appkit-auth-wagmi-react-native": "0.0.0-refactor-modal-migration-20241017180354",
     "@reown/appkit-coinbase-wagmi-react-native": "0.0.0-refactor-modal-migration-20241017180354",
     "@reown/appkit-wagmi-react-native": "0.0.0-refactor-modal-migration-20241017180354",
-    "@sentry/react-native": "5.20.0",
+    "@sentry/react-native": "6.1.0",
     "@tanstack/react-query": "5.51.1",
     "@walletconnect/react-native-compat": "2.16.0",
-    "expo": "51.0.20",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
+    "expo": "~52.0.0-preview.12",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-bootsplash": "5.5.3",
     "react-native-config": "1.5.2",
     "react-native-device-info": "11.1.0",
-    "react-native-gesture-handler": "^2.20.0",
+    "react-native-gesture-handler": "2.20.2",
     "react-native-get-random-values": "1.11.0",
-    "react-native-mmkv": "2.12.2",
+    "react-native-mmkv": "3.1.0",
     "react-native-modal": "13.0.1",
-    "react-native-reanimated": "^3.15.4",
-    "react-native-safe-area-context": "4.10.8",
-    "react-native-screens": "3.32.0",
-    "react-native-svg": "15.4.0",
+    "react-native-reanimated": "3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "3.35.0",
+    "react-native-svg": "15.8.0",
     "react-native-toast-message": "2.2.1",
-    "react-native-webview": "13.12.3",
-    "viem": "2.21.19",
-    "wagmi": "2.12.17"
+    "react-native-webview": "13.12.2",
+    "viem": "2.21.37",
+    "wagmi": "2.12.25"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.85",
-    "@react-native/eslint-config": "0.74.85",
-    "@react-native/metro-config": "0.74.85",
-    "@react-native/typescript-config": "0.74.85",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.0",
+    "@react-native-community/cli-platform-android": "15.0.0",
+    "@react-native-community/cli-platform-ios": "15.0.0",
+    "@react-native/babel-preset": "0.76.1",
+    "@react-native/eslint-config": "0.76.1",
+    "@react-native/metro-config": "0.76.1",
+    "@react-native/typescript-config": "0.76.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -64,7 +67,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
